doctor-changes-fixing-a-problems